--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "sweetalert": "^2.1.2"
   },
   "scripts": {
-    "start": "node server.js",
+    "start": "start server.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
